<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="100dp"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/white"
    >

    <TextView
        android:id="@+id/tv_all"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/myQuote_bottom"
        android:layout_marginTop="@dimen/myQuote_top"
        android:gravity="center"
        android:text="@string/all" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_width"
        android:background="@drawable/lineColor" />

    <TextView
        android:id="@+id/tv_sea_transport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/myQuote_bottom"
        android:layout_marginTop="@dimen/myQuote_top"
        android:gravity="center"
        android:text="@string/sea_transport" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_width"
        android:background="@drawable/lineColor" />

    <TextView
        android:id="@+id/tv_air_transport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/myQuote_bottom"
        android:layout_marginTop="@dimen/myQuote_top"
        android:gravity="center"
        android:text="@string/air_transport" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_width"
        android:background="@drawable/lineColor" />

    <TextView
        android:id="@+id/tv_land_transport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/myQuote_bottom"
        android:layout_marginTop="@dimen/myQuote_top"
        android:gravity="center"
        android:text="@string/land_transport" />

</LinearLayout>