<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="18dp"
    tools:context=".PalletSeaSpellOfferActivity" >

    <com.ateam.shippingcity.widget.ElasticScrollView
        android:id="@+id/elasticScrollView1"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="7dp"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/select_offer_weight"
                    android:textSize="@dimen/pallet_offer_title" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/myQuote_item_height"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btn_heavyCargo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/quotes_select_weight_icon"
                    android:textSize="@dimen/pallet_offer_title"
                    android:textColor="@color/pallet_offer_btn"
                    android:text="@string/heavy_cargo" />

                <TextView
                    android:layout_width="20dp"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/btn_lightCargo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/quotes_unselected_weight_icon"
                    android:textSize="@dimen/pallet_offer_title"
                    android:textColor="@color/pallet_offer_btn"
                    android:text="@string/light_cargo" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/myQuote_item_height"
                android:layout_marginTop="33dp"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/et_money"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/xlist_marginl"
                    android:layout_weight="1"
                    android:inputType="numberDecimal"
                    android:hint="@string/input_price" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/S_RT"
                    android:textColor="@color/pallet_text_red"
                    android:textSize="@dimen/xlist_pallet_title_text" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@drawable/lineColor" />

            <EditText
                android:id="@+id/et_addInform"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginTop="42dp"
                android:background="@drawable/shape_rectangle_edittext"
                android:gravity="left|top"
                android:hint="@string/add_inform"
                android:inputType="textMultiLine"
                android:minLines="5"
                android:padding="5dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />
        </LinearLayout>
    </com.ateam.shippingcity.widget.ElasticScrollView>

    <Button
        android:id="@+id/btn_commit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/my_offer_shape"
        android:text="@string/commit"
        android:textColor="@color/white" />

</LinearLayout>