<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/white"
    tools:context=".PalletOfferResultActivity" >

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="79dp"
        android:orientation="horizontal">
        <TextView 
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <ImageView 
            android:id="@+id/iv_sucOrFail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/submitted_successfully"/>
        <TextView 
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>
    <TextView 
        android:id="@+id/tv_sucOrFailOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:textColor="@color/black50PercentColor"
        android:text="@string/fail_one"/>
    <TextView 
        android:id="@+id/tv_sucOrFailTwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:textColor="@color/black50PercentColor"
        android:text="@string/fail_two"/>
    
    <Button 
        android:id="@+id/btn_reCommit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:background="@drawable/my_offer_shape"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/re_commit"/>
    

</LinearLayout>
