<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".PalletSeaWholeOfferActivity" >

    <com.ateam.shippingcity.widget.ElasticScrollView
        android:id="@+id/elasticScrollView1"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ship_company_no_point"
                    android:textSize="18sp" />

                <com.ateam.shippingcity.widget.HAutoCompleteTextView
                    android:id="@+id/et_shipCompany"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/xlist_marginl"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:completionThreshold="1"
                    android:dropDownHorizontalOffset="20dp"
                    android:textSize="16sp"
                    android:hint="@string/input_ship_company_name" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:background="@drawable/lineColor" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/myQuote_item_height"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/offer_company"
                    android:textColor="@color/coralColor"
                    android:layout_marginLeft="10dp"
                    android:textSize="16sp" />
            </LinearLayout>
            
            <LinearLayout
                android:id="@+id/layout_addBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="10dp"
                >
                
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@drawable/lineColor" />

            <EditText
                android:id="@+id/et_addInform"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="37dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/shape_rectangle_edittext"
                android:gravity="left|top"
                android:hint="@string/add_inform"
                android:inputType="textMultiLine"
                android:minLines="5"
                android:padding="5dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />
        </LinearLayout>
    </com.ateam.shippingcity.widget.ElasticScrollView>

    <Button
        android:id="@+id/btn_commit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/my_offer_shape"
        android:text="@string/commit"
        android:textColor="@color/white" />

</LinearLayout>